Fix overlaping between breadcrumb and toc-sidebar
the breacrumb has z-index (1020) greater than to toc-sidebar (1000)

- Increase z-index of toc-bar to 1100.

Issue: #23

--- a/reflow-maven-skin/src/main/resources/css/reflow-skin.css
+++ b/reflow-maven-skin/src/main/resources/css/reflow-skin.css
@@ -193,7 +193,7 @@ a[name]:before {
  *--------------------------------------------------*/
 
 #toc-bar {
-    z-index:1020;
+    z-index:1120;
 }
 
 /*--------------------------------------------------
@@ -203,7 +203,7 @@ a[name]:before {
 /* affix toc aside bar
 */
 #toc-sidebar {
-    z-index: 1000;
+    z-index: 1100;
 }
 
 #toc-sidebar.affix {
@@ -288,7 +288,7 @@ a[name]:before {
 /*--------------------------------------------------
  * banner
  *--------------------------------------------------*/
- 
+
 
 /* Fix for header links - do not color/underline them */
 #banner a {
